--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <div id="errorAWG" class="error-message">值超出范围 [0-40]</div>
     </div>
 
+    <!-- 其他输入框类似 -->
+
+
     <!-- 直径(毫米)框 -->
     <div class="input-group">
       <label for="diameter">直径(毫米)：</label>
