--- a/index.html
+++ b/index.html
@@ -10,51 +10,57 @@
 
 <body>
   <h1>AWG 转换器</h1>
-  <div class="container">
-    <!-- AWG线规框 -->
-    <div class="input-group">
-      <label for="awg">AWG线规：</label>
-      <div class="input-box" id="awgBox" onclick="editField('awg')" onkeydown="updateValue(event, 'awg')"
-        contenteditable="true" data-placeholder="请输入AWG值"></div>
-      <div id="errorAWG" class="error-message">值超出范围 [0-40]</div>
+
+  <!-- 外层容器 -->
+  <div class="wrapper">
+
+    <div class="container">
+      <!-- AWG线规框 -->
+      <div class="input-group">
+        <label for="awg">AWG线规：</label>
+        <div class="input-box" id="awgBox" onclick="editField('awg')" onkeydown="updateValue(event, 'awg')"
+          contenteditable="true" data-placeholder="请输入AWG值"></div>
+        <div id="errorAWG" class="error-message">值超出范围 [0-40]</div>
+      </div>
+
+      <!-- 直径(毫米)框 -->
+      <div class="input-group">
+        <label for="diameter">直径(毫米)：</label>
+        <div class="input-box" id="diameterBox" onclick="editField('diameter')"
+          onkeydown="updateValue(event, 'diameter')" contenteditable="true" data-placeholder="请输入直径(毫米)"></div>
+      </div>
+
+      <!-- 直径(英寸)框 -->
+      <div class="input-group">
+        <label for="inchDiameter">直径(英寸)：</label>
+        <div class="input-box" id="inchDiameterBox" onclick="editField('inchDiameter')"
+          onkeydown="updateValue(event, 'inchDiameter')" contenteditable="true" data-placeholder="请输入直径(英寸)"></div>
+      </div>
+
+      <!-- 横截面积(平方毫米)框 -->
+      <div class="input-group">
+        <label for="area">横截面积(平方毫米)：</label>
+        <div class="input-box" id="areaBox" onclick="editField('area')" onkeydown="updateValue(event, 'area')"
+          contenteditable="true" data-placeholder="请输入面积(平方毫米)"></div>
+      </div>
+
+      <!-- 横截面积(平方英寸)框 -->
+      <div class="input-group">
+        <label for="inchArea">横截面积(平方英寸)：</label>
+        <div class="input-box" id="inchAreaBox" onclick="editField('inchArea')"
+          onkeydown="updateValue(event, 'inchArea')" contenteditable="true" data-placeholder="请输入面积(平方英寸)"></div>
+      </div>
+
+      <!-- 圆密耳面积框 -->
+      <div class="input-group">
+        <label for="milArea">圆密耳面积(KCMIL)：</label>
+        <div class="input-box" id="milAreaBox" onclick="editField('milArea')" onkeydown="updateValue(event, 'milArea')"
+          contenteditable="true" data-placeholder="请输入圆密耳面积(KCMIL)"></div>
+      </div>
     </div>
-
-    <!-- 其他输入框类似 -->
-
-
-    <!-- 直径(毫米)框 -->
-    <div class="input-group">
-      <label for="diameter">直径(毫米)：</label>
-      <div class="input-box" id="diameterBox" onclick="editField('diameter')" onkeydown="updateValue(event, 'diameter')"
-        contenteditable="true" data-placeholder="请输入直径(毫米)"></div>
-    </div>
-
-    <!-- 直径(英寸)框 -->
-    <div class="input-group">
-      <label for="inchDiameter">直径(英寸)：</label>
-      <div class="input-box" id="inchDiameterBox" onclick="editField('inchDiameter')"
-        onkeydown="updateValue(event, 'inchDiameter')" contenteditable="true" data-placeholder="请输入直径(英寸)"></div>
-    </div>
-
-    <!-- 横截面积(平方毫米)框 -->
-    <div class="input-group">
-      <label for="area">横截面积(平方毫米)：</label>
-      <div class="input-box" id="areaBox" onclick="editField('area')" onkeydown="updateValue(event, 'area')"
-        contenteditable="true" data-placeholder="请输入面积(平方毫米)"></div>
-    </div>
-
-    <!-- 横截面积(平方英寸)框 -->
-    <div class="input-group">
-      <label for="inchArea">横截面积(平方英寸)：</label>
-      <div class="input-box" id="inchAreaBox" onclick="editField('inchArea')" onkeydown="updateValue(event, 'inchArea')"
-        contenteditable="true" data-placeholder="请输入面积(平方英寸)"></div>
-    </div>
-
-    <!-- 圆密耳面积框 -->
-    <div class="input-group">
-      <label for="milArea">圆密耳面积(KCMIL)：</label>
-      <div class="input-box" id="milAreaBox" onclick="editField('milArea')" onkeydown="updateValue(event, 'milArea')"
-        contenteditable="true" data-placeholder="请输入圆密耳面积(KCMIL)"></div>
+    <!-- 说明文字，左对齐 -->
+    <div class="note">
+      <p>结果会按照最接近的AWG值取整来推算其它相关参数</p>
     </div>
   </div>
 
