--- a/index.html
+++ b/index.html
@@ -75,10 +75,19 @@
   <!-- 弹窗 -->
   <div id="infoModal" class="modal">
     <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <img src="线规.png" alt="说明图片">
+
+      <!-- 关闭按钮区域 -->
+      <div class="close-container">
+        <span class="close" onclick="closeModal()">&times;</span>
+      </div>
+
+      <!-- 图文内容区域 -->
+      <div class="content-container">
+        <img src="线规.png" alt="说明图片">
+      </div>
     </div>
   </div>
+
 
   <script src="scripts.js"></script>
 </body>
