--- a/index.html
+++ b/index.html
@@ -1,266 +1,95 @@
-/* 全局样式 */
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f4f7fc;
-  margin: 0;
-  /* padding: 20px; */
-  color: #333;
-}
+<!DOCTYPE html>
+<html lang="zh">
 
-h1 {
-  color: #2c3e50;
-  text-align: center;
-  font-size: 2.5em;
-  margin-bottom: 30px;
-}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>导线AWG美规转换器</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-/* 外层容器样式 */
-.wrapper {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 0px;
-}
+<body>
+  <h1>AWG 线规转换器</h1>
 
-/* 按钮样式 */
-.button {
-  font-size: 14px;
-  color: #555;
-  text-align: right;
-  font-weight: bold;
-  margin-top: -50px;
-  margin-bottom: 10px;
-}
+  <!-- 外层容器 -->
+  <div class="wrapper">
+    <div class="button">
+      <button id="showInfoButton">图文对照</button>
+    </div>
+    <div class="container">
+      <!-- AWG线规框 -->
+      <div class="input-group">
+        <label for="awg">AWG线规：</label>
+        <div class="input-box" id="awgBox" onclick="editField('awg')" onkeydown="updateValue(event, 'awg')"
+          contenteditable="true" data-placeholder="请输入AWG值"></div>
+        <div id="errorAWG" class="error-message">值超出范围 [0-40]</div>
+      </div>
+      <!-- <br> -->
+      <hr>
+      <br>
+      <!-- 直径(毫米)框 -->
+      <div class="input-group">
+        <label for="diameter">导线直径(毫米)：</label>
+        <div class="input-box" id="diameterBox" onclick="editField('diameter')"
+          onkeydown="updateValue(event, 'diameter')" contenteditable="true" data-placeholder="请输入直径(mm)"></div>
+      </div>
 
-.button button {
-  background-color: #2980b9;
-  color: rgb(255, 255, 255);
-  border: none;
-  padding: 5px 8px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-}
+      <!-- 横截面积(平方毫米)框 -->
+      <div class="input-group">
+        <label for="area">横截面积(平方毫米)：</label>
+        <div class="input-box" id="areaBox" onclick="editField('area')" onkeydown="updateValue(event, 'area')"
+          contenteditable="true" data-placeholder="请输入面积(mm²)"></div>
+      </div>
+      <!-- <br> -->
+      <hr>
+      <br>
+      <!-- 直径(英寸)框 -->
+      <div class="input-group">
+        <label for="inchDiameter">导线直径(英寸)：</label>
+        <div class="input-box" id="inchDiameterBox" onclick="editField('inchDiameter')"
+          onkeydown="updateValue(event, 'inchDiameter')" contenteditable="true" data-placeholder="请输入直径(in)"></div>
+      </div>
 
-.button button:hover {
-  background-color: #0099ff;
-}
+      <!-- 横截面积(平方英寸)框 -->
+      <div class="input-group">
+        <label for="inchArea">横截面积(平方英寸)：</label>
+        <div class="input-box" id="inchAreaBox" onclick="editField('inchArea')"
+          onkeydown="updateValue(event, 'inchArea')" contenteditable="true" data-placeholder="请输入面积(in²)"></div>
+      </div>
+      <!-- <br> -->
+      <hr>
+      <br>
+      <!-- 圆密耳面积框 -->
+      <div class="input-group">
+        <label for="milArea">圆密耳面积(KCMIL)：</label>
+        <div class="input-box" id="milAreaBox" onclick="editField('milArea')" onkeydown="updateValue(event, 'milArea')"
+          contenteditable="true" data-placeholder="请输入圆密耳面积(KCMIL)"></div>
+      </div>
+    </div>
+    <!-- 说明文字，左对齐 -->
+    <div class="note">
+      <p>结果会按照最接近的AWG值取整来推算其它相关参数</p>
+    </div>
+  </div>
 
-/* 弹窗背景样式 */
-.modal {
-  display: none;
-  position: fixed;
-  /* 弹窗背景固定 */
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  overflow: auto;
-}
+  <!-- 弹窗 -->
+  <div id="infoModal" class="modal">
+    <div class="modal-content">
 
-/* 弹窗内容框 */
-.modal-content {
-  background-color: #fff;
-  width: 80%;
-  /* 使用百分比宽度 */
-  max-width: 800px;
-  /* 最大宽度 800px */
-  height: auto;
-  max-height: calc(100vh - 40px);
-  /* 最大高度为视口高度减去一些空间 */
-  margin: 2% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  /* 圆角效果 */
-}
+      <!-- 关闭按钮区域 -->
+      <div class="close-container">
+        <span class="close" onclick="closeModal()">&times;</span>
+      </div>
 
-
-/* 关闭按钮区域 */
-.close-container {
-  /* position: absolute; */
-  /* 绝对定位 */
-  text-align: right;
-  top: 20px;
-  right: 20px;
-  z-index: 2;
-  /* 确保按钮在最上层 */
-}
-
-/* 关闭按钮 */
-.close {
-
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px 15px;
-  /* 增加按钮的内边距 */
-  background-color: #e74c3c;
-  /* 红色背景 */
-  border: none;
-  border-radius: 5px;
-  /* 圆角效果 */
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  /* 添加过渡效果 */
-}
-
-.close:hover,
-.close:focus {
-  background-color: #c0392b;
-  /* 悬停时背景色变深 */
-  text-decoration: none;
-}
-
-/* 图文内容区域 */
-.content-container {
-  overflow: auto;
-  /* 允许内容滚动 */
-  margin-top: 20px;
-  max-height: 80vh;
-  /* 限制最大高度 */
-}
-
-.modal img {
-  max-width: 100%;
-  height: auto;
-}
+      <!-- 图文内容区域 -->
+      <div class="content-container">
+        <img src="线规.png" alt="说明图片">
+      </div>
+    </div>
+  </div>
 
 
+  <script src="scripts.js"></script>
+</body>
 
-
-/* 说明文字的样式 */
-.note {
-  font-size: 14px;
-  color: #555;
-  text-align: right;
-  font-weight: bold;
-  margin-top: 10px;
-  padding-left: 10px;
-  /* 左对齐 */
-}
-
-.note p {
-  margin: 0;
-}
-
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 30px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-
-.input-group {
-  margin-bottom: 20px;
-}
-
-label {
-  font-size: 16px;
-  color: #2c3e50;
-  display: block;
-  margin-bottom: 8px;
-  font-weight: bold;
-}
-
-/* 输入框样式 */
-.input-box {
-  width: 100%;
-  padding: 15px;
-  margin-top: 8px;
-  border: 2px solid #ccc;
-  border-radius: 8px;
-  font-size: 16px;
-  color: #333;
-  box-sizing: border-box;
-  text-align: left;
-  background-color: #f9f9f9;
-  min-height: 40px;
-  line-height: 22px;
-  position: relative;
-}
-
-.input-box:focus {
-  border-color: #3498db;
-  outline: none;
-  background-color: #fff;
-}
-
-.input-box[contenteditable="true"]:empty:before {
-  content: attr(data-placeholder);
-  color: #aaa;
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  transform: translateY(-50%);
-  pointer-events: none;
-}
-
-.error-message {
-  color: red;
-  font-size: 14px;
-  margin-top: 5px;
-  display: none;
-}
-
-/* 错误提示显示时 */
-.error-message.active {
-  display: block;
-}
-
-input-box.shake-border {
-  animation: shake 0.5s ease-in-out;
-}
-
-
-/* 动画：输入框的闪烁效果 */
-@keyframes shake {
-  0% {
-    border-color: red;
-  }
-
-  25% {
-    border-color: transparent;
-  }
-
-  50% {
-    border-color: red;
-  }
-
-  75% {
-    border-color: transparent;
-  }
-
-  100% {
-    border-color: red;
-  }
-}
-
-/* 响应式设计 */
-@media (max-width: 600px) {
-  .container {
-    padding: 15px;
-  }
-
-  button {
-    font-size: 14px;
-  }
-
-  h1 {
-    font-size: 1.8em;
-  }
-
-  .modal-content {
-    width: 90%;
-    /* 更小的设备使用 90% 宽度 */
-    max-width: none;
-    /* 移除最大宽度 */
-    padding: 10px;
-  }
-}
+</html>
