--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <!-- 说明文字，左对齐 -->
     <div class="note">
-      <p>结果会按照最接近的AWG值取整来推算其它相关参数</p>
+      <p>按下Enter键计算结果，结果会按照最接近的AWG值取整来推算其它相关参数</p>
     </div>
   </div>
 
