--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <!-- 图文内容区域 -->
       <div class="content-container">
-        <img src="线规.png" alt="说明图片">
+        <img src="线规.png" alt="说明图片" loading="lazy">
       </div>
     </div>
   </div>
